# Robotics_Test_Task

./: README.md
Task1/: opencv_example.py
Task2/: Dockerfile  build_cont.sh  build_img.sh  new_window_cont.sh
Task2/src/LIO-SAM/: package.xml
Task2/src/LIO-SAM/config/: params.yaml  rviz2.rviz
Task2/src/LIO-SAM/include/lio_sam/: utility.hpp
Task2/src/LIO-SAM/launch/: run.launch.py
Task2/src/LIO-SAM/src/: imuPreintegration.cpp  mapOptmization.cpp
Task2/src/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
Task2/src/wheeled_description/: CMakeLists.txt  package.xml
Task2/src/wheeled_description/config/: wheeled_controllers.yaml
Task2/src/wheeled_description/launch/: rsp.launch.py  wheeled.launch.py
Task2/src/wheeled_description/meshes/: base_link.STL  fl_wh_link.STL  fr_wh_link.STL  lidar_link.STL  rl_wh_link.STL  rr_wh_link.STL
Task2/src/wheeled_description/urdf/: depth_camera.xacro  ros2_control.xacro  wheeled_description.urdf  wheeled_robot.xacro
Task2/src/wheeled_description/worlds/: obstacle_maze.world
