<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeled_description</name>
  <version>0.0.0</version>
  <description>Simulation of wheeled robot with lidar in Gazebo</description>
  <maintainer email="qarol46ows@gmail.com">kirill</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>std_srvs</depend>

  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_common</depend>
  <depend>slam_toolbox</depend>  

  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros</depend>

  <depend>pcl_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libtbb-dev</build_depend>

  <depend>robot_state_publisher</depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>